--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "koa-bodyparser": "^4.2.1",
     "koa-favicon": "^2.0.1",
     "koa-logger": "^3.2.0",
+    "koa-passport": "^4.1.3",
     "koa-send": "^5.0.0",
+    "koa-session": "^5.13.1",
     "koa-static": "^5.0.0",
     "nodemon": "^1.19.4",
+    "passport-local": "^1.0.0",
     "uuid": "^3.3.2"
   }
 }
