--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "koa-static": "^5.0.0",
     "nodemon": "^1.19.4",
     "passport-local": "^1.0.0",
+    "pug": "^2.0.4",
     "uuid": "^3.3.2"
   }
 }
